🐛 FIX: Fixes for Boxlang API changes, tweak build setup for boxlang versions